# routes/books.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 const booksController = require('../controllers/books');
-const validation = require('../middleware/validacion');
+// const validation = require('../middleware/validacion');
 const { isAuthenticated } = require("../middleware/authenticate");
 
 
@@ -10,9 +10,9 @@ router.get('/', booksController.getAll);
 
 router.get('/:id', booksController.getSingle);
 
-router.post('/', isAuthenticated, validation.saveBooks, booksController.createBooks);
+router.post('/', isAuthenticated, booksController.createBooks);
 
-router.put('/:id', isAuthenticated, validation.saveBooks, booksController.updateBooks);
+router.put('/:id', isAuthenticated, booksController.updateBooks);
 
 router.delete('/:id', isAuthenticated, booksController.deleteBooks);
 
