# routes/index.js
@@ -1,20 +1,34 @@
+const passport = require('passport');
+
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
 
-router.get('/', (req, res) => { 
-    res.send('Hello World');
-});
+// router.get('/', (req, res) => { 
+//     res.send('Hello World');
+// });
 
 router.use('/songs', require('./songs'));
-
 router.use('/books', require('./books'));
 
-router.get('/login', passport.authenticate('github'), (req, res) =>{});
+
+
+router.get('/login',
+    passport.authenticate('github', { scope: ['user:email'] })
+);
+
 router.get('/logout', function(req, res, next) {
     req.logout(function(err) {
         if (err) { return next(err); }
-        res.redirect('/');
+
+        req.session.user = null;
+
+
+        req.session.destroy(() => {
+            res.clearCookie('connect.sid');
+            res.redirect('/');
+
+        });
     });
     });
 
