# routes/songs.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 const songsController = require('../controllers/songs');
-const validation = require('../middleware/validate');
+// const validation = require('../middleware/validate');
 
 const { isAuthenticated } = require("../middleware/authenticate");
 
@@ -10,9 +10,9 @@ router.get('/', songsController.getAll);
 
 router.get('/:id', songsController.getSingle);
 
-router.post('/', isAuthenticated, validation.saveSong, songsController.createSongs);
+router.post('/', isAuthenticated, songsController.createSongs);
 
-router.put('/:id', isAuthenticated, validation.saveSong, songsController.updateSongs);
+router.put('/:id', isAuthenticated, songsController.updateSongs);
 
 router.delete('/:id', isAuthenticated, songsController.deleteSongs);
 
